V1.2024.01.06: pequeños cambios en las clases de Ticket, TickerMessage y TicketStatus. Adición de TicketMessageRepository y TicketRepository.